--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
-  "name": "static-site",
+  "name": "readme-generator",
   "version": "1.0.0",
-  "description": "",
+  "description": "A high quality readme generator that accepts user input.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Marlon Matthew",
   "license": "ISC",
   "dependencies": {
     "inquirer": "^6.3.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/marlonmatthew/readme-generator.git"
+  },
+  "keywords": [
+    "Readme",
+    "Generator"
+  ],
+  "bugs": {
+    "url": "https://github.com/marlonmatthew/readme-generator/issues"
+  },
+  "homepage": "https://github.com/marlonmatthew/readme-generator#readme"
 }
